# vk_engine

./: .gitignore  CMakeLists.txt  README.md
include/: DeletionQueue.h  Engine.h  Helpers.h  Initializers.h  Material.h  Mesh.h  PipelineBuilder.h  RenderObject.h  Types.h  VulkanHelpers.h
samples/basic/: CMakeLists.txt  main.cpp
shaders/: base_trimesh.vert  base_vertex_color.frag  triangle.frag  triangle.vert
src/: DeletionQueue.cpp  Engine.cpp  EngineInit.cpp  Helpers.cpp  Initializers.cpp  Material.cpp  Mesh.cpp  PipelineBuilder.cpp  RenderObject.cpp  Types.cpp
